# Punch

./: .gitignore  .pre-commit-config.yaml  Makefile  meson.build  meson_options.txt
.github/workflows/: ci.yml
src/: bench.h  engine.cc  engine.h  evaluate.cc  evaluate.h  main.cc  move_picker.cc  move_picker.h  movepicker.cc  movepicker.h  search.cc  search.h  time_manager.cc  time_manager.h  transposition_table.cc  transposition_table.h  uci.cc  uci.h  uci_option.h  version.h  version.inc
src/chess/: attacks.cc  attacks.h  attacks_test.cc  bitboard.h  board.cc  board.h  board_test.cc  movegen.cc  movegen.h  movegen_test.cc  perft.cc  perft.h  perft_test.cc  types.h  zobrist.h  zobrist.inc  zobrist_test.cc
src/utils/: multiarray.h  static_vector.h
